fix: audit hardening for pool, migrations, defer, bus and watchers
Pool rejects foreign PooledConnection with an actionable SqlException
instead of ClassCastException. Migration stale-lock steal is now a
conditional delete on executed_at, and release is scoped to an owner
token so a slow owner cannot delete a sibling's takeover lock.
Defer.supply preserves Error types instead of wrapping them; ScopedCache
warns past 16 accumulated onClose handlers; the log compressor pool gains
a shutdown hook; LazyValue documents its null contract. CallBus proxies
forward null arguments instead of failing in List.of. Node sorts a copy
instead of mutating the caller's list. WebSocket accept-key encoding is
pinned to UTF-8 (length-vs-bytes). Config watchLoop always re-arms its
WatchKey.